# santi

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  flavor.toml  manage.ps1  manage.sh  runseal.toml  santi.example.toml
.github/workflows/: guard.yml  release-beta.yml  release-stable.yml
.runseal/: deno.json
.runseal/hooks/: commit-msg  pre-commit
.runseal/lib/audit/: audit.ts
.runseal/lib/dev/: manager.ts  stamp.ts
.runseal/lib/guard/: guard.ts
.runseal/lib/init/: init.ts
.runseal/lib/land/: land.ts
.runseal/lib/release/: artifacts.ts  env.ts  meta.ts  publish.ts  r2.ts  release.ts  smoke.ts
.runseal/lib/std/: cmd.ts  fs.ts  proc.ts  repo.ts
.runseal/packaging/deb/: README.md  control  postinst  postrm  prerm  santi-upgrade.service  santi.env.example  santi.service
.runseal/wrappers/: audit.ts  dev.ts  guard.ts  init.ts  land.ts  release.ts
crates/santi/: Cargo.toml
crates/santi-api/: Cargo.toml
crates/santi-api/src/: bucket.rs  config.rs  lib.rs  main.rs  ops.rs  provider.rs  server.rs  upgrade.rs  webhook.rs
crates/santi-api/tests/: config.rs
crates/santi-cli/: Cargo.toml
crates/santi-cli/src/: main.rs
crates/santi-core/: Cargo.toml
crates/santi-core/src/: lib.rs  model.rs  object_store.rs  service.rs  service_bucket.rs  service_prompt.rs  store.rs  workspace_uri.rs
crates/santi-core/src/assembly/: input.rs  mod.rs  system_prompt.rs
crates/santi-core/src/model/: message.rs
crates/santi-core/src/service/: failure.rs  materials.rs  text_delta.rs  thinking.rs  timing.rs  tools.rs
crates/santi-core/src/store/: assembly.rs  compact.rs  db.rs  rows.rs  runtime.rs  schema.rs
crates/santi-core/src/store/db/: timeline.rs
crates/santi-core/tests/: failure.rs  service.rs  store.rs  system_prompt.rs  workspace_uri.rs
crates/santi-provider/: Cargo.toml
crates/santi-provider/src/: chat_completions.rs  lib.rs  openai.rs  provider.rs
crates/santi-provider/tests/: chat_completions.rs  openai.rs
crates/santi/src/: main.rs
