[package]
name = "santi-api"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-stream.workspace = true
axum.workspace = true
clap.workspace = true
futures-core.workspace = true
futures-util.workspace = true
santi-core.workspace = true
santi-provider.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tower-http.workspace = true
utoipa.workspace = true
