[package]
name = "santi-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
futures-core.workspace = true
futures-util.workspace = true
jiff.workspace = true
rusqlite.workspace = true
santi-provider.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
utoipa.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
