[package]
name = "santi"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "santi"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
reqwest.workspace = true
santi-api.workspace = true
serde_json.workspace = true
tokio.workspace = true
